fix: resize comment box size & align comment submit button and subsidiary on project page

--- a/hanwooplz_project/hanwooplz_app/static/css/portfolio.css
+++ b/hanwooplz_project/hanwooplz_app/static/css/portfolio.css
@@ -60,6 +60,7 @@
 }
 
 .subsidiary {
+    width:100%;
     display: flex;
     justify-content: center;
     font-size: 12px;
